format-transformer-panel-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: format-transformer-frontend-ingress
  namespace: ft-frontend
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - http:
      paths:
        - path: "/"
          pathType: Prefix
          backend:
            service:
              name: format-transformer-panel-service
              port:
                number: 80
